Estilos para navbar y footer

--- a/Posts/templates/Posts/posts_page.html
+++ b/Posts/templates/Posts/posts_page.html
@@ -18,11 +18,9 @@
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Gambito de dama</li>
-                    <li class="list-group-item">Netflix</li>
-                    <li class="list-group-item">Actrices</li>
+                    <li class="list-group-item">Gambito de dama, Netflix, Actrices</li>
                 </ul>
-                <div class="card-body">
+                <div class="card-body hola">
                     <a href="#" class="btn btn-primary btn-chisme">¡Cuentame todo!</a>
                 </div>
             </div>
