--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,117 +1,81 @@
-<footer class="text-center text-lg-start bg-white text-muted">
+<footer class="text-center text-lg-start bg-white text-muted pie-pagina">
     <section class="">
       <div class="container text-center text-md-start mt-5">
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <!-- Left -->
             <div class="me-5 d-none d-lg-block">
-              <span>Get connected with us on social networks:</span>
+              <span>Encuentrame en mis redes sociales:</span>
             </div>
-            <!-- Left -->
-        
-            <!-- Right -->
             <div>
-              <a href="" class="me-4 link-secondary">
-                <i class="fa-brands fa-square-facebook"></i>
+              <a href="https://www.facebook.com/villaballesluis" class="me-4 link-secondary">
+                <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i>
               </a>
-              <a href="" class="me-4 link-secondary">
-                <i class="fab fa-twitter"></i>
               </a>
-              <a href="" class="me-4 link-secondary">
-                <i class="fab fa-google"></i>
+              <a href="https://www.instagram.com/villalbaluiz/" class="me-4 link-secondary">
+                <i class="fab fa-instagram" style="color: #ffffff;"></i>
               </a>
-              <a href="" class="me-4 link-secondary">
-                <i class="fab fa-instagram"></i>
+              <a href="https://www.linkedin.com/in/villalbaluiz/" class="me-4 link-secondary">
+                <i class="fab fa-linkedin" style="color: #ffffff;"></i>
               </a>
-              <a href="" class="me-4 link-secondary">
-                <i class="fab fa-linkedin"></i>
-              </a>
-              <a href="" class="me-4 link-secondary">
-                <i class="fab fa-github"></i>
+              <a href="https://github.com/villalbaluis" class="me-4 link-secondary">
+                <i class="fab fa-github" style="color: #ffffff;"></i>
               </a>
             </div>
-            <!-- Right -->
           </section>
-        <!-- Grid row -->
         <div class="row mt-3">
-          <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3 text-secondary"></i>Company name
+              <i class="fas fa-gem me-3 text-secondary text-white"></i>villalbaluis
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              Aprendiendo y diseñando, buscando una superación mediatica,
+              siempre buscando aprender y crecer. 
             </p>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              Últimos repos
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a href="https://github.com/villalbaluis/django_restAPI-ReactFront" class="text-reset">To Do app</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a href="https://github.com/villalbaluis/django_blog" class="text-reset">Blog con Djangp</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a href="https://github.com/villalbaluis/Pokemon" class="text-reset">Pokemon PHP</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a href="https://github.com/villalbaluis/javascript30" class="text-reset">Practica JS</a>
             </p>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
+              Empresas - Proyectos
             </h6>
             <p>
-              <a href="#!" class="text-reset">Pricing</a>
+              <a href="https://www.linkedin.com/company/cw-tecnología-inteligente/" class="text-reset">Co_Workers</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Settings</a>
+              <a href="https://yawiautomations.com" class="text-reset">CyT</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Help</a>
+              <a href="https://biblioteca.confa.co:8181" class="text-reset">Biblioteca Digital</a>
             </p>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="fas fa-home me-3 text-secondary"></i> New York, NY 10012, US</p>
+            <h6 class="text-uppercase fw-bold mb-4">Contactame</h6>
+            <p><i class="fas fa-home me-3 text-secondary text-white"></i> Manizales, Colombia (170006)</p>
             <p>
-              <i class="fas fa-envelope me-3 text-secondary"></i>
-              info@example.com
+              <i class="fas fa-envelope me-3 text-secondary text-white"></i>
+              luisvillalba244@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
+            <p><i class="fas fa-phone me-3 text-secondary text-white"></i> +57 3155669183</p>
           </div>
-          <!-- Grid column -->
         </div>
-        <!-- Grid row -->
       </div>
     </section>
-    <!-- Section: Links  -->
-  
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    <div class="text-center p-4 text-white" style="background-color: rgba(0, 0, 0, 0.025);">
+      © 2023 Derechos reservados:
+      <a class="text-reset fw-bold" href="https://villalbaluiz.me">villalbaluiz.me</a>
     </div>
-    <!-- Copyright -->
   </footer>
-  <!-- Footer -->
