--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary menu-app">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="" alt="Bootstrap" width="30" height="24">
+            <img src="" alt="Chismecito" width="30" height="24">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,14 +10,14 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">¡Todos los chismes!</a>
+                    <a class="nav-link active text-white" aria-current="page" href="#">¡Todos los chismes!</a>
                 </li>
                 <!-- <li class="nav-item">
                         <a class="nav-link" href="#">La red</a>
                     </li> -->
             </ul>
             <a class="nav-link" href="#">
-                <span class="navbar-text">
+                <span class="navbar-text text-white">
                     Crear chismecito
                 </span>
             </a>
