Estilos para tarjetas de post

--- a/static/css/main_styles.css
+++ b/static/css/main_styles.css
@@ -10,10 +10,27 @@ body {
     background-color: rgb(255, 255, 243);
 }
 
-.menu-app, 
-.pie-pagina{
+.menu-app,
+.pie-pagina {
     background-color: #786d6f !important;
     color: whitesmoke !important;
+}
+
+.pie-pagina {
+    position: fixed !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    width: 100% !important;
+}
+
+.tarjeta-chisme {
+    width: 18rem;
+    background-color: #fdf6f1;
+    font-family: sans-serif;
+}
+
+.tags-chisme{
+    background-color: #fdfbf4;
 }
 
 .btn-chisme {
@@ -24,11 +41,13 @@ body {
     color: #3e3742 !important;
     border-color: #825e65 !important;
     font-weight: bold !important;
-};
+}
 
 .btn-chisme:hover {
-    background-color:#825e65 !important;
+    background-color: #825e65 !important;
     color: #e8e8e8 !important;
-    border-color:#e6e0c5 !important;
+    border-color: #e6e0c5 !important;
     font-style: oblique !important;
-};
+}
+
+;
