--- a/Posts/templates/Posts/posts_page.html
+++ b/Posts/templates/Posts/posts_page.html
@@ -6,7 +6,7 @@
 <div class="container mt-5">
     <div class="row row-cols-auto">
         <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card tarjeta-chisme" style="width: 18rem;">
                 <img src="" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">¡Gambito de dama!</h5>
@@ -17,7 +17,7 @@
                         sucediendo con este éxitoso proyecto
                     </p>
                 </div>
-                <ul class="list-group list-group-flush">
+                <ul class="list-group list-group-flush tags-chisme">
                     <li class="list-group-item">Gambito de dama, Netflix, Actrices</li>
                 </ul>
                 <div class="card-body hola">
