--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start bg-white text-muted pie-pagina">
+<footer class="text-center text-lg-start bg-white text-muted pie-pagina mt-5">
     <section class="">
       <div class="container text-center text-md-start mt-5">
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
